2005-07-03  Adam Schreiber <sadam@clemson.edu>
    * src/seahorse-generate-select.glade: Fix problem where pressing
    <return> doesn't activate continue button.
    * help/C/seahorse.xml: Begin Documentation Overhaul (bug #309360)
    
2005-07-02  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-search.glade: Fix problem where pressing
    <return> doesn't activate search button. 
    Patch by Adam Schreiber (bug #157818)
    * libseahorse/seahorse-util.c: Make sure keyring backups are 
    only readable by current user. 
    Patch by Adam Schreiber (bug #308163)
    * libseahorse/seahorse-context.c: Added precondition check to 
    seahorse_context_get_key_source
    
2005-06-05  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2005-06-04  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus-ext/seahorse-nautilus.c: Don't show context menu
    items on application/x-desktop items. Fixes bug #305962
    
2005-05-20  Nate Nielsen  <nielsen@memberwebs.com>

    * seahorse-util.c: Always associate *.asc with application/pgp-keys 
    in the chooser dialog. The mime handling doesn't always work early
    enough.
    * bonobo/Seahorse_PGP_File_Listener.server.in.in:
    * plugins/nautilus-ext/seahorse-nautilus.c: Clean up nautilus menu items.
    
2005-05-19  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus-ext/seahorse-nautilus.c: Clearer status messages
    for nautilus plugin.
    * agent/seahorse-agent-io.c: Create agent socket inside users home
    directory.
    * libseahorse/seahorse-pgp-source.c: Fix problem where only keys that
    were already imported would be reported by the import operation.
    * libseahorse/seahorse-progress.c: 
    * src/seahorse-key-manager.c: 
    * src/seahorse-keyserver-results.c: Display status text properly after
    performing an operation with no or minimal visible results. 
    * src/Makefile.am: