@@ -1,3 +1,6 @@
+2005-07-04 Adam Schreiber <sadam@clemson.edu>
+	* help/C/seahorse.xml: Added text for Text Editor(bug #309360)
+
 2005-07-03  Adam Schreiber <sadam@clemson.edu>
     * src/seahorse-generate-select.glade: Fix problem where pressing
     <return> doesn't activate continue button.
